--- a/online-compiler/backend/package.json
+++ b/online-compiler/backend/package.json
@@ -5,16 +5,20 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.1.3",
     "express": "^4.18.2",
+    "mongoose": "^7.2.2",
+    "morgan": "^1.10.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "nodemon": "1.17.5"
+    "nodemon": "^1.17.5"
   }
 }
