--- a/online-compiler/backend/package.json
+++ b/online-compiler/backend/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.1.3",
     "express": "^4.18.2",
+    "moment": "^2.29.4",
     "mongodb": "4.1",
     "mongoose": "^7.2.2",
     "morgan": "^1.10.0",
