--- a/Mocha/package.json
+++ b/Mocha/package.json
@@ -12,5 +12,8 @@
     "chai": "^4.3.7",
     "mocha": "^10.2.0",
     "sinon": "^15.2.0"
+  },
+  "dependencies": {
+    "chai-as-promised": "^7.1.1"
   }
 }
