--- a/Mocha/package.json
+++ b/Mocha/package.json
@@ -4,13 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha './specs/**/*.spec.js'"
+    "test": "mocha './specs/**/*.spec.js'",
+    "test2": "mocha --reporter mochawesome --reporter-options reportDir=customReportDir,reportFilename=customReportFilename"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "chai": "^4.3.7",
     "mocha": "^10.2.0",
+    "mochawesome": "^7.1.3",
     "sinon": "^15.2.0"
   },
   "dependencies": {
