barely finish mocha hook

--- a/Mocha/package.json
+++ b/Mocha/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha './specs/**/*.spec.js'",
-    "test2": "mocha --reporter mochawesome --reporter-options reportDir=customReportDir,reportFilename=customReportFilename"
+    "test": "mocha './specs/**/*.spec.js'"
   },
   "author": "",
   "license": "ISC",
