--- a/online-compiler/backend/package.json
+++ b/online-compiler/backend/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.4.0",
     "chai": "^4.3.7",
     "cors": "^2.8.5",
     "dotenv": "^16.1.3",
